--- a/blog-preview-card-main/index.css
+++ b/blog-preview-card-main/index.css
@@ -2,6 +2,7 @@ body {
   background-color: hsl(47, 88%, 63%);
   font-family: "Figtree", sans-serif;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
