--- a/blog-preview-card-main/index.css
+++ b/blog-preview-card-main/index.css
@@ -59,6 +59,10 @@ h1 {
   align-items: center;
 }
 
+.attribution {
+  margin-top: 20px;
+}
+
 @media (max-width: 600px){
     .card {
         width: 90%;
