--- a/testimonials-grid-section-main/style.css
+++ b/testimonials-grid-section-main/style.css
@@ -38,7 +38,7 @@ body {
 
 .cards {
   padding-block: 32px;
-  width: 1120px;
+  max-width: 1120px;
   display: grid;
   gap: 24px;
   grid-auto-columns: 1fr;
@@ -120,6 +120,7 @@ p {
     "b"
     "c"
     "d"
-    "e"
+    "e";
+    margin: 10px;
   }
 }
